--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,8 +33,8 @@
     </plurals>
 
     <plurals name="plural_unit_ounce">
-        <item quantity="one">Oz</item>
-        <item quantity="other">Oz</item>
+        <item quantity="one">Ounce</item>
+        <item quantity="other">Ounces</item>
     </plurals>
 
 </resources>
