--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,40 +1,13 @@
 <resources>
     <string name="app_name">Recipe</string>
-    <string name="appwidget_text">EXAMPLE</string>
-    <string name="add_widget">Add widget</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
-
-    <plurals name="plural_unit_gram">
-        <item quantity="one">Gram</item>
-        <item quantity="other">Grams</item>
-    </plurals>
-
-    <plurals name="plural_unit_kilo_grams">
-        <item quantity="one">Kg</item>
-        <item quantity="other">Kilorams</item>
-    </plurals>
-
-    <plurals name="plural_unit_cup">
-        <item quantity="one">Cup</item>
-        <item quantity="other">Cups</item>
-    </plurals>
-
-    <plurals name="plural_unit_tablespoon">
-        <item quantity="one">Tablespoon</item>
-        <item quantity="other">Tablespoons</item>
-    </plurals>
-
-    <plurals name="plural_unit_teaspoon">
-        <item quantity="one">Teaspoon</item>
-        <item quantity="other">Teaspoons</item>
-    </plurals>
-
-    <plurals name="plural_unit_ounce">
-        <item quantity="one">Ounce</item>
-        <item quantity="other">Ounces</item>
-    </plurals>
-
+    <string name="content_description_approval_icon">Approval Icon</string>
+    <string name="content_description_recipe_image_thumbnail">Recipe Image Thumbnail</string>
+    <string name="content_description_favorite_icon">Favorite Icon</string>
+    <string name="content_description_serving_icon">Serving Icon</string>
+    <string name="content_description_step_icon">Step Icon</string>
+    <string name="label_add_recipe">Add Recipe</string>
+    <string name="label_cache_permission">We need to write cache so you can load recipes faster next time.</string>
+    <string name="label_available_recipes">Available Recipes : </string>
 </resources>
