--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="label_add_recipe">Add Recipe</string>
     <string name="label_cache_permission">We need to write cache so you can load recipes faster next time.</string>
     <string name="label_available_recipes">Available Recipes : </string>
+    <string name="label_offline">Could not load data\nPlease check your internet connection</string>
+    <string name="label_refresh">Refresh</string>
 </resources>
